node-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: hello-node-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-node
          servicePort: 80
        path: /test
